fdo#78786: No need to insert entries here for date members.

Data member entries are inserted when they are added in addDateMember().

Change-Id: I6cb2e3629053fe2bb49517c4ef8d5c1fee576446